--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
   "short_name": "AirHorner",
-  "name": "Kinlan's AirHorner of Infamy"
+  "name": "Kinlan's AirHorner of Infamy",
+  "gcm_sender_id": "425149788979"
 }
